add nav bar, nav menu, imgs folder, header

--- a/index.html
+++ b/index.html
@@ -5,49 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sportowa Kuźnia</title>
+    <title>CośTamStrona</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/small.css">
-    <link rel="stylesheet" media="screen and (min-width: 768px)" href="/big.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" media="screen and (min-width: 768px)" href="/big.css"> -->
 </head>
 
 <body>
     <!-- main container -->
-    <div class="main">
 
-        <!-- navigation -->
-        <div class="navSmall">
-            <span class="logo">Sportowa Kuźnia</span>
+    <!-- navigation -->
+    <section class="nav">
+        <div class="menuLabel">
             <button href="" class="menuBars"><i class="fas fa-bars"></i></button>
-            <div class="collapseMenu">
-
-            </div>
-
+            <span class="logo">CośTamStrona</span>
         </div>
-        <!-- <div class="navBig">
-            <a href="" class="menuBars"><i class="fas fa-bars"></i></a>
-        </div> -->
+        <div class="collapseMenu">
+            <ul>
+                <li>Home</li>
+                <li>Articles</li>
+                <li>Training</li>
+                <li>Calculators</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </section>
 
-        <div class="header"></div>
-        <div class="about"></div>
-        <div class="articlesListSection"></div>
-        <div class="currentArticleSection"></div>
-        <div class="trainingsSection"></div>
-        <div class="calculatorSection"></div>
-        <div class="footer"></div>
-    </div>
-
-
-
-
-
+    <section class="header">
+        <div class="hero-shadow"></div>
+        <h1>Sportowa Kuźnia</h1>
+        <span>quote</span>
+    </section>
+    <section class="about"></section>
+    <section class="articlesListSection"></section>
+    <section class="currentArticleSection"></section>
+    <section class="trainingsSection"></section>
+    <section class="calculatorSection"></section>
+    <section class="footer"></section>
 
 
     <!-- Scripts -->
