add header, article list section, small changes

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CośTamStrona</title>
+    <title>Sportowa Kuźnia</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/small.css">
-    <!-- <link rel="stylesheet" media="screen and (min-width: 768px)" href="/big.css"> -->
+    <link rel="stylesheet" media="screen and (min-width: 576px)" href="/medium.css">
+    <link rel="stylesheet" media="screen and (min-width: 768px)" href="/big.css">
 </head>
 
 <body>
@@ -25,15 +27,15 @@
     <section class="nav">
         <div class="menuLabel">
             <button href="" class="menuBars"><i class="fas fa-bars"></i></button>
-            <span class="logo">CośTamStrona</span>
+            <span class="logo">tu bydzie logo</span>
         </div>
         <div class="collapseMenu">
             <ul>
-                <li>Home</li>
-                <li>Articles</li>
-                <li>Training</li>
-                <li>Calculators</li>
-                <li>Contact</li>
+                <li><i class="fas fa-home"></i>Glówna</li>
+                <li><i class="fas fa-book-reader"></i>Artykuły</li>
+                <li><i class="fas fa-fire-alt"></i>Trening</li>
+                <li><i class="fas fa-calculator"></i>Kalkulatory</li>
+                <li><i class="fas fa-mail-bulk"></i>O Nas</li>
             </ul>
         </div>
     </section>
@@ -41,13 +43,42 @@
     <section class="header">
         <div class="hero-shadow"></div>
         <h1>Sportowa Kuźnia</h1>
-        <span>quote</span>
+        <!-- <h3>wytop tluszcz, wykuj miesnie xD</h3> -->
+        <span>"Zanim coś osiągniesz, musisz czegoś od siebie oczekiwać” – Michael Jordan</span>
     </section>
-    <section class="about"></section>
-    <section class="articlesListSection"></section>
+    <section class="articlesListSection">
+        <h3><i class="fas fa-book-reader"></i> Artykuły</h3>
+        <div class="underline"></div>
+
+        <div class="artCard firstArticle">
+            <div class="textCard">
+                <h3>Zmęczenie w ciągu dnia</h3>
+                <span>Skąd się bierze i jakie popelniamy bledy?</span>
+            </div>
+        </div>
+        <div class="artCard secondArticle">
+            <div class="textCard">
+                <h3>Ćwiczenia a zdrowie psychiczne</h3>
+                <span>Benefity zdrowotne dzięki aktywności fizycznej</span>
+            </div>
+        </div>
+        <div class="artCard thirdArticle">
+            <div class="textCard">
+                <h3>Sauna na regenerację</h3>
+                <span>Czy sauna po treningu fizycznym jest wskazana?</span>
+            </div>
+        </div>
+        <div class="artCard fourthArticle">
+            <div class="textCard">
+                <h3>Jak uniknac zakwasów?</h3>
+                <span>Poznaj 5 sposobów jak uniknąć bólu kolejnego dnia</span>
+            </div>
+        </div>
+    </section>
     <section class="currentArticleSection"></section>
     <section class="trainingsSection"></section>
     <section class="calculatorSection"></section>
+    <section class="about"></section>
     <section class="footer"></section>
 
 
