--- a/index.html
+++ b/index.html
@@ -28,27 +28,88 @@
     <div class="wrapper">
 
         <!-- navigation -->
-        <section class="nav">
+        <div class="nav">
             <div class="menuLabel">
                 <button href="" class="menuBars"><i class="fas fa-bars"></i></button>
-                <span class="logo"><h3>SK |</h3><img src="/imgs/logo1.png" alt=""></span>
+                <span class="logo">
+                    <h3>SK |</h3><img src="/imgs/logo1.png" alt="">
+                </span>
             </div>
             <div class="collapseMenu">
                 <ul>
                     <li><i class="fas fa-home"></i>Glówna</li>
+                    <!-- <li><i class="fas fa-dumbbell"></i>O Nas</li> -->
                     <li><i class="fas fa-book-reader"></i>Artykuły</li>
                     <li><i class="fas fa-fire-alt"></i>Trening</li>
                     <li><i class="fas fa-calculator"></i>Kalkulatory</li>
-                    <li><i class="fas fa-mail-bulk"></i>O Nas</li>
                 </ul>
             </div>
-        </section>
+        </div>
 
         <section class="header">
             <div class="hero-shadow"></div>
             <h1>Sportowa Kuźnia</h1>
             <!-- <h3>wytop tluszcz, wykuj miesnie xD</h3> -->
-            <span>"Zanim coś osiągniesz, musisz czegoś od siebie oczekiwać” – Michael Jordan</span>
+            <span>Wykuj swoją formę na lata!</span>
+        </section>
+        <section class="about">
+            <h3><i class="fas fa-home"></i> Witaj sportowcu</h3>
+            <div class="underline"></div>
+            <div class="allQuotes">
+
+                <div class="quoteContainer WW">
+                    <span class="quote">
+                        "Przeciwności losu powodują, że jedni się załamują, a inni łamią rekordy”</span>
+                    <span class="quoteAuthor">~ William A. Ward</span>
+                </div>
+                <div class="quoteContainer VS">
+                    <span class="quote">"Jedynym miejscem, w którym sukces pojawia się wcześniej niż praca jest
+                        słownik”</span>
+                    <span class="quoteAuthor">~ Vidal Sassoon</span>
+                </div>
+                <div class="quoteContainer LH">
+                    <span class="quote">"Nikt nigdy nie utonął we własnym pocie”</span>
+                    <span class="quoteAuthor">~ Lou Holtz</span>
+                </div>
+                <div class="quoteContainer BB">
+                    <span class="quote">"Nie ma czegoś takiego jak zła pogoda, są tylko zbyt delikatni ludzie”</span>
+                    <span class="quoteAuthor">~ Bill Bowerman</span>
+                </div>
+                <div class="quoteContainer ER">
+                    <span class="quote">"Przyszłość należy do tych, którzy wierzą w piękno swoich marzeń”</span>
+                    <span class="quoteAuthor">~ Eleanor Roosevelt</span>
+                </div>
+                <div class="quoteContainer KB">
+                    <span class="quote">"Moment, w którym się poddajesz to moment, w którym ktoś inny wygrywa."</span>
+                    <span class="quoteAuthor">~ Kobe Bryant</span>
+                </div>
+            </div>
+            <div class="activeQuote">
+                <div class="quoteContainer MJ">
+                    <span class="quote">"Zanim coś osiągniesz, musisz czegoś od siebie
+                        oczekiwać”
+                    </span>
+                    <span class="quoteAuthor">~ Michael Jordan</span>
+                </div>
+                <a><i class="fas fa-redo"></i></a>
+            </div>
+            <div class="desrciption">
+                <p>Jeżeli tu trafiles to znaczy, że interesuje Cię zbudowanie formy nie tylko na jeden sezon, ale na
+                    lata!</p>
+                <p>Sportowa Kuźnia to projekt, który ma na celu pomóc Ci w zbudowaniu oraz utrzymaniu zdrowej formy
+                    przez
+                    dlugi czas. Na naszym portalu znajdziesz wyselekcjonowane i najciekawsze artykuly ze świata fitness
+                    oraz świata sportu. Ponaddto z nami przygotujesz i rozplanujesz swój wlasny, indywidualny trening -
+                    bez placenia tysięcy zl na niesprawdzonych trenerów. Pomożemy Ci również w wyliczeniu podstawowych
+                    mierników określających zdrowe i sprawne cialo!</p>
+                <p>Jeżeli będziesz mial jakiekolwiek pytania to śmialo skorzystaj z poniższych platform, aby uzyskać
+                    odpowiedź wprost od twórców portalu!</p>
+            </div>
+            <div class="footerIcons">
+                <a href="" class="icon link"><i class="fab fa-linkedin-in"></i></a>
+                <a href="" class="icon git"><i class="fab fa-github"></i></a>
+                <a href="" class="icon ig"><i class="fab fa-instagram"></i></a>
+            </div>
         </section>
         <section class="articlesListSection">
             <h3><i class="fas fa-book-reader"></i> Artykuły</h3>
@@ -933,6 +994,58 @@
                     </ul>
                 </div>
                 <div class="allCalcs">
+                    <div class="ymcaCalc">
+                        <h3>Kalkulator YMCA</h3>
+                        <div class="underline"></div>
+                        <div class="desrciption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+                            nulla, beatae tenetur aspernatur eum non numquam ad dolores praesentium fuga molestiae
+                            maxime modi debitis aut, repellendus ratione obcaecati enim quidem.
+
+                            <a href="#">FAQ</a>
+                            <div class="ymcaInputContainer">
+                                <span class="ymcaQuestion gender">Pleć</span>
+                                <button>wybierz</button>
+                            </div>
+                            <div class="ymcaInputContainer">
+                                <span class="ymcaQuestion weight">Waga</span>
+                                <button>wybierz</button>
+                            </div>
+                            <div class="ymcaInputContainer">
+                                <span class="ymcaQuestion height">Obwód pasa</span>
+                                <button>wybierz</button>
+                            </div>
+                            <div class="result">
+                                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, quis.</span>
+                            </div>
+
+                        </div>
+                        <div class="bmiCalc">
+                            <h3>Kalkulator BMI</h3>
+                            <div class="underline"></div>
+                            <div class="desrciption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+                                nulla, beatae tenetur aspernatur eum non numquam ad dolores praesentium fuga molestiae
+                                maxime modi debitis aut, repellendus ratione obcaecati enim quidem.
+
+                                <a href="#">FAQ</a>
+
+                            </div>
+                            <div class="bmiInputContainer">
+                                <span class="bmiQuestion gender">Pleć</span>
+                                <button>wybierz</button>
+                            </div>
+                            <div class="bmiInputContainer">
+                                <span class="bmiQuestion weight">Waga</span>
+                                <button>wybierz</button>
+                            </div>
+                            <div class="bmiInputContainer">
+                                <span class="bmiQuestion height">Wzrost</span>
+                                <button>wybierz</button>
+                            </div>
+                            <div class="result">
+                                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, quis.</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="activeCalc">
                     <div class="kcalCalc">
@@ -947,42 +1060,70 @@
                         <div class="kcalInputs">
                             <div class="kcalInputContainer">
                                 <span class="kcalQuestion gender">Pleć</span>
-                                <button>wybierz</button>
+                                <div class="GenderFormContainer">
+                                    <!-- <div class="gender-check">
+                                        <input class="gender-check-input" type="radio" name="genderRadio"
+                                            id="femaleRadio">
+                                        <label class="gender-check-label" for="femaleRadio">
+                                            Kobieta
+                                        </label>
+                                    </div>
+                                    <div class="gender-check">
+                                        <input class="gender-check-input" type="radio" name="genderRadio" id="maleRadio"
+                                            checked>
+                                        <label class="gender-check-label" for="maleRadio">
+                                            Mężczyzna
+                                        </label>
+                                    </div> -->
+                                    <select class="form-select" multiple aria-label="multiple select example"
+                                        style="background-color: black; border: none; height: 50px; color: white;">
+                                        <option value="female" style="text-align: center;">Kobieta</option>
+                                        <option value="male">Mężczyzna</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="kcalInputContainer">
                                 <span class="kcalQuestion age">Wiek</span>
-                                <button>wybierz</button>
+                                <input type="text" class="kcalInput inputAge" pattern="\d*" maxlength="2">
                             </div>
                             <div class="kcalInputContainer">
                                 <span class="kcalQuestion weight">Waga</span>
-                                <button>wybierz</button>
+                                <input type="text" class="kcalInput inputAge" pattern="\d*" maxlength="2">
                             </div>
                             <div class="kcalInputContainer">
                                 <span class="kcalQuestion height">Wzrost</span>
-                                <button>wybierz</button>
+                                <input type="text" class="kcalInput inputAge" pattern="\d*" maxlength="2">
                             </div>
                             <div class="kcalInputContainer">
                                 <span class="kcalQuestion activity">Aktywnosc</span>
-                                <button>wybierz</button>
+                                <div class="activityContainer">
+                                    <select class="activity-form" aria-label="activity-select">
+                                        <option value="1">Niewielka</option>
+                                        <option value="2">Niska</option>
+                                        <option value="3">Średnia</option>
+                                        <option value="4">Wysoka</option>
+                                        <option value="5">Bardzo wysoka</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="kcalInputContainer">
                                 <span class="kcalQuestion target">Cel</span>
-                                <button>wybierz</button>
+                                <div class="activityContainer">
+                                    <select class="activity-form" aria-label="activity-select">
+                                        <option value="weightLoss">Redukcja wagi</option>
+                                        <option value="weightGain">Przybranie wagi</option>
+                                        <option value="weightStay">Utrzymanie wagi</option>
+                                    </select>
                             </div>
+                        </div>
+                        <div class="result">
+                            <span>Aby <span class="resultWeight">x</span> musisz spożywać każdego dnia <span class="resultKcal">y</span>.</span>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
-        <!-- <section class="about"></section> -->
         <section class="footer">
-            <div class="copyright"><span>@ Marcin Bogucki</span></div>
-            <span>|</span>
-            <div class="footerIcons">
-                <a href="" class="icon link"><i class="fab fa-linkedin-in"></i></a>
-                <a href="" class="icon git"><i class="fab fa-github"></i></a>
-                <a href="" class="icon ig"><i class="fab fa-instagram"></i></a>
-            </div>
+            <div class="copyright"><span>@ Marcin Bogucki 2021</span></div>
         </section>
     </div>
 
