code cleaning sass, html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- dać do testów, samemu przetestować, poprawić stylistykę (modal jeszcze) 0> 31.05 ddl
-ogarnąć KOD html -> css -> medium // 31.05 -> js, poukładać, pokombinować z funkcjami, dodać komentarze //01.06
-ogarnąć GITa 03.06
-ogarnąć dokumentację 03.06!
-w międzyczasie mozna pomyśleć nad animacją -->
-
 <!-- ogarnąć inputy w kalkuklatorze, zeby działały jak w modalu i może bez - i +. Dodatkowo ogarnąć, żeby nie można było wpisywać e i nieskonczonej ilosci cyfr w modalu, wtf? -->
 
 <!DOCTYPE html>
@@ -288,7 +282,6 @@ w międzyczasie mozna pomyśleć nad animacją -->
             </tr>
           </tbody>
         </table>
-        <!-- <span class="resultsNF">Nie znaleziono wyników!</span> -->
       </div>
       <div class="underline"></div>
       <h2>Twoja Lista:</h2>
@@ -300,7 +293,7 @@ w międzyczasie mozna pomyśleć nad animacją -->
             <tr>
               <th class="ownTableHead ownTableProductNameHead columnShow columnHide" onclick="sortOwnTable(0)">
                 <div class="theadSpanIconContainer">
-                  <span id="product">Product</span>
+                  <span id="product">Produkt</span>
                   <i class="fa-solid fa-sort-down arrowSort arrowSortHide"></i>
                 </div>
               </th>
@@ -1012,7 +1005,6 @@ w międzyczasie mozna pomyśleć nad animacją -->
                 <div class="backgroundTrainingShadow"></div>
                 <h3>Trening cardio</h3>
               </div>
-              <!-- <img src="/imgs/training_cardio1.jpg" alt="" class="trainingImg"> -->
               <p>
                 <span class="highlighted">Trening cardio</span> to ćwiczenia wytrzymałościowe dotleniające organizm, poprawiające pracę układu krążenia oraz kondycję organizmu. Trening cardio nazywany jest też treningiem tlenowym. <span class="highlighted">Zwiększa ilość oddechów na minutę</span> oraz <span class="highlighted">przyspiesza tętno</span> , co sprawia, że komórki i tkanki mięśniowe są lepiej dotlenione. Pozwala również dość szybko <span class="highlighted">pozbyć się zbędnych kilogramów</span>.
               </p>
