sass fix, path update

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- icons -->
     <script src="https://kit.fontawesome.com/03ad30190e.js" crossorigin="anonymous"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="/small.css">
-    <link rel="stylesheet" media="screen and (min-width: 560px)" href="/medium.css">
+    <link rel="stylesheet" href="small.css">
+    <link rel="stylesheet" media="screen and (min-width: 560px)" href="medium.css">
   </head>
   <body>
     <!-- errorPopUp -->
@@ -36,7 +36,7 @@
       <button class="errorConfirm">OK</button>
     </div>
     <!-- modal diet tables -->
-    <div class="modalDietContainer hideDisplayModal showDisplayModal">
+    <div class="modalDietContainer hideDisplayModal">
       <button class="btnModalExit">
         <i class="fa-solid fa-circle-xmark exitModalIcon"></i>
       </button>
@@ -376,7 +376,7 @@
         </div>
         <div class="logo">
           <a href="#">SK.org</a>
-          <img src="/imgs/logo2.png" alt="logo flame">
+          <img src="imgs/logo2.png" alt="logo flame">
         </div>
       </div>
       <!-- burger menu for small devices -->
@@ -575,7 +575,7 @@
             <div class="underline"></div>
             <div class="articleInfo">
               <div class="imgArticleMain">
-                <img src="/imgs/article_zdrowiepsych.jpg" alt="">
+                <img src="imgs/article_zdrowiepsych.jpg" alt="">
               </div>
               <div class="articleDetailsContainer">
                 <h5 class="articleAuthor">
@@ -624,7 +624,7 @@
             <div class="underline"></div>
             <div class="articleInfo">
               <div class="imgArticleMain">
-                <img src="/imgs/bledySmall.jpg" alt="">
+                <img src="imgs/bledySmall.jpg" alt="">
               </div>
               <div class="articleDetailsContainer">
                 <h5 class="articleAuthor">
@@ -685,7 +685,7 @@
             <div class="underline"></div>
             <div class="articleInfo">
               <div class="imgArticleMain">
-                <img src="/imgs/article_sauna.jpg" alt="">
+                <img src="imgs/article_sauna.jpg" alt="">
               </div>
               <div class="articleDetailsContainer">
                 <h5 class="articleAuthor">
@@ -745,7 +745,7 @@
             <div class="underline"></div>
             <div class="articleInfo">
               <div class="imgArticleMain">
-                <img src="/imgs/article_zmeczenie.jpg" alt="">
+                <img src="imgs/article_zmeczenie.jpg" alt="">
               </div>
               <div class="articleDetailsContainer">
                 <h5 class="articleAuthor">
@@ -802,7 +802,7 @@
             <div class="underline"></div>
             <div class="articleInfo">
               <div class="imgArticleMain">
-                <img src="/imgs/article_podstawy.jpg" alt="">
+                <img src="imgs/article_podstawy.jpg" alt="">
               </div>
               <div class="articleDetailsContainer">
                 <h5 class="articleAuthor">
@@ -902,7 +902,7 @@
             <div class="underline"></div>
             <div class="articleInfo">
               <div class="imgArticleMain">
-                <img src="/imgs/burgerSmall.jpg" alt="">
+                <img src="imgs/burgerSmall.jpg" alt="">
               </div>
               <div class="articleDetailsContainer">
                 <span class="articleAuthor">
@@ -1363,17 +1363,17 @@
       <section class="footer">
         <div class="footerIcons">
           <a href="" class="icon link">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
           </a>
           <a href="" class="icon git">
-            <i class="fab fa-github"></i>
+            <i class="fa-brands fa-github"></i>
           </a>
           <a href="" class="icon ig">
-            <i class="fab fa-instagram"></i>
+            <i class="fa-brands fa-instagram"></i>
           </a>
         </div>
         <div class="copyright">
-          <span>@ miglanc 2022</span>
+          <span>@ miglvnc 2022</span>
         </div>
       </section>
     </div>
@@ -1384,6 +1384,6 @@
   integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
   crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> -->
     <!-- main.js script -->
-    <script src="/main.js" defer></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
