--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sportowa Kuźnia</title>
+    <link rel="icon" href="imgs/logo2.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -470,7 +471,7 @@
         </div>
         <div class="activeQuote"></div>
         <button class="quoteChangeBtn">
-          <i class="fas fa-redo"></i>
+          <i class="fas iconRefresh fa-redo"></i>
         </button>
         <div class="description">
           <p>Jeżeli tu trafiłes to znaczy, że interesuje Cię <span class="highlighted">zbudowanie formy</span> nie tylko na jeden sezon, ale na lata! </p>
