nav, article js rewriting + fix

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             </li>
             <li class="page-item">
               <div class="blocked"></div>
-              <a class="page-link pageNext" aria-label="Next">
+              <a class="page-link pageNext" disabled aria-label="Next">
                 <span class="nextArrow" aria-hidden="true">&raquo;</span>
               </a>
             </li>
