null output search own table, js rewriting

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
             </tr>
           </tbody>
         </table>
+        <div class="resultSearchNotFound"><h2>Nie znaleziono takiego produktu!</h2></div>
       </div>
       <div class="underline"></div>
       <h2>Twoja Lista:</h2>
