final version, ready for testing

--- a/index.html
+++ b/index.html
@@ -1149,15 +1149,15 @@
                 <div class="calcInputContainer">
                   <span class="calcQuestion age">Wiek</span>
                   <!-- input pattern - max 3 digits -->
-                  <input type="text" placeholder="lata" class="calcInput inputAge" maxlength="2">
+                  <input type="number" placeholder="lata" class="calcInput inputAge" maxlength="2">
                 </div>
                 <div class="calcInputContainer">
                   <span class="calcQuestion weight">Waga</span>
-                  <input type="text" placeholder="kg" class="calcInput inputWeight" maxlength="3">
+                  <input type="number" placeholder="kg" class="calcInput inputWeight" maxlength="3">
                 </div>
                 <div class="calcInputContainer">
                   <span class="calcQuestion height">Wzrost</span>
-                  <input type="text" placeholder="cm" class="calcInput inputHeight" maxlength="3">
+                  <input type="number" placeholder="cm" class="calcInput inputHeight" maxlength="3">
                 </div>
                 <div class="detailsInfoContainer">
                   <div class="detailsInfo">
